tests/baselines/reference/incompleteDottedExpressionAtEOF.errors.txt
==== tests/cases/compiler/incompleteDottedExpressionAtEOF.ts (2 errors) ====
    // used to leak __missing into error message
    var p2 = window. 
                     
!!! error TS1003: Identifier expected.
             ~~~~~~
!!! error TS2304: Cannot find name 'window'.